update swagger.yaml and todo_controller.go files
